--- a/shot-log.ipynb
+++ b/shot-log.ipynb
@@ -1037,7 +1037,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#random tree classifier"
+   ]
   }
  ],
  "metadata": {
