random forest classifier method

--- a/shot-log.ipynb
+++ b/shot-log.ipynb
@@ -1042,7 +1042,23 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score, recall_score, ConfusionMatrixDisplay\n",
     "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
-    "from scipy.stats import randint_gen\n"
+    "from scipy.stats import randint_gen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_cols = ['SHOT_DIST', 'CLOSE_DEF_DIST']\n",
+    "X = defender_df_paint[feature_cols]\n",
+    "y = defender_df_paint.SHOT_RESULT\n",
+    "X_train, X_test, y_train, y_test = (train_test_split, X, y, test_size = 0.2)\n",
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred = rf.predict(X_test)\n",
+    "print(\"Accuracy: \", metrics.accuracy_score(y_test, y_pred))"
    ]
   }
  ],
